--- a/dz5/hw5.html
+++ b/dz5/hw5.html
@@ -30,19 +30,22 @@
       </header>
       <section class="regbox">
         <button type="button" name="Log in Facebook">
+
           <p class="faceicon">
             f
           </p>
-       <p>
+         <p>
          Log in
-       </p>
-       <p>
+         </p>
+         <p>
          whith
-       </p>
-       <p>
+         </p>
+         <p>
          Facebook  >
-       </p>
+         <p>
+
         </button>
+
         <p class="line">
           OU
         </p>
@@ -53,10 +56,10 @@
         <input type="password" name="Choose password" placeholder="Choose Password" value="">
         <input type="password" name="Confirm password" placeholder="Password Confirm" value="">
         </p>
-        <p>
+        <label>
           <input type="checkbox" name="Agree updates">
           Send me Youbike updates and tips
-        </p>
+        </label>
         <form>
                 <button class="subbutton"> Greate my account </button>
         </form>
