--- a/dz3/homework3.html
+++ b/dz3/homework3.html
@@ -17,7 +17,7 @@
           <li><a href="#">Контакты</a>
         </ul>
     </header>
-    <div class="conteiner">
+    <div class="conteiner  clearfix">
     <ul class="left_menu">
       <li><a href="#">Ноутбуки</a></li>
       <li><a href="#">Планшеты</a></li>
