--- a/dz4/hw4.html
+++ b/dz4/hw4.html
@@ -9,7 +9,7 @@
   <body>
     <div class="wraper">
     <header>
-      <p>
+      <p class="contacts">
         Наши контакты:<br>
         +9-098-765-4321<br>
         +9-0123-456-890<br>
@@ -23,28 +23,28 @@
       </div>
       <div class="countries">
         <p>
-          <img src="img/maldives.png" alt="Maldives flag" /><br>
-          <a href="#">Мальдивы</a>
-        </p>
-        <p>
-          <img src="img/sri_lanka.png" alt="Sri Lanka flag" /><br>
-          <a href="#">Шри-Ланка</a>
-        </p>
-        <p>
-          <img src="img/butan.png" alt="Bhutan flag" /><br>
-          <a href="#">Бутан</a>
-        </p>
-        <p>
-          <img src="img/tibet.png" alt="Tibet flag" /><br>
-          <a href="#">Тибет</a>
+          <img src="img/india.png" alt="India flag" /><br>
+          <a href="#">Индия</a>
         </p>
         <p>
           <img src="img/nepal.png" alt="Nepal flag" /><br>
           <a href="#">Непал</a>
         </p>
         <p>
-          <img src="img/india.png" alt="India flag" /><br>
-          <a href="#">Индия</a>
+          <img src="img/tibet.png" alt="Tibet flag" /><br>
+          <a href="#">Тибет</a>
+        </p>
+        <p>
+          <img src="img/butan.png" alt="Bhutan flag" /><br>
+          <a href="#">Бутан</a>
+        </p>
+        <p>
+          <img src="img/sri_lanka.png" alt="Sri Lanka flag" /><br>
+          <a href="#">Шри-Ланка</a>
+        </p>
+        <p>
+          <img src="img/maldives.png" alt="Maldives flag" /><br>
+          <a href="#">Мальдивы</a>
         </p>
       </div>
       <div class="photo">
