--- a/dz4/hw4.html
+++ b/dz4/hw4.html
@@ -51,7 +51,7 @@
       </div>
       <ul class="panel">
         <li><a href="#">Главная</a>
-          <li><a href="#">Путешествие &#9660;</a>
+          <li><a href="#">Путешествие <p class="tri">&#9660;</p></a>
             <ul class="submenu">
               <li><a href="#">Путешествие 1</a></li>
               <li><a href="#">Путешествие 2</a></li>
@@ -60,7 +60,7 @@
               <li><a href="#">Путешествие 5</a></li>
             </ul>
           </li>
-        <li><a href="#">Услуги &#9660;</a>
+        <li><a href="#">Услуги <p class="tri">&#9660;</p></a>
           <ul class="submenu">
             <li><a href="#">Услуга 1</a></li><br>
             <li><a href="#">Услуга 2</a></li><br>
@@ -69,7 +69,7 @@
             <li><a href="#">Услуга 5</a></li>
           </ul>
         </li>
-        <li><a href="#">Партнерам &#9660;</a>
+        <li><a href="#">Партнерам <p class="tri">&#9660;</p></a>
           <ul class="submenu">
             <li><a href="#">Предложение 1</a></li>
             <li><a href="#">Предложение 2</a></li>
