--- a/dz4/hw4.html
+++ b/dz4/hw4.html
@@ -53,10 +53,10 @@
         <li><a href="#">Главная</a>
           <li><a href="#">Путешествие <p class="tri">&#9660;</p></a>
             <ul class="submenu">
-              <li><a href="#">Путешествие 1</a></li>
-              <li><a href="#">Путешествие 2</a></li>
-              <li><a href="#">Путешествие 3</a></li>
-              <li><a href="#">Путешествие 4</a></li>
+              <li><a href="#">Путешествие 1</a></li><br>
+              <li><a href="#">Путешествие 2</a></li><br>
+              <li><a href="#">Путешествие 3</a></li><br>
+              <li><a href="#">Путешествие 4</a></li><br>
               <li><a href="#">Путешествие 5</a></li>
             </ul>
           </li>
@@ -71,10 +71,10 @@
         </li>
         <li><a href="#">Партнерам <p class="tri">&#9660;</p></a>
           <ul class="submenu">
-            <li><a href="#">Предложение 1</a></li>
-            <li><a href="#">Предложение 2</a></li>
-            <li><a href="#">Предложение 3</a></li>
-            <li><a href="#">Предложение 4</a></li>
+            <li><a href="#">Предложение 1</a></li><br>
+            <li><a href="#">Предложение 2</a></li><br>
+            <li><a href="#">Предложение 3</a></li><br>
+            <li><a href="#">Предложение 4</a></li><br>
             <li><a href="#">Предложение 5</a></li>
           </ul>
         </li>
